--- a/PreEntrega2_ValleYbañez_Matias/pages/historia.html
+++ b/PreEntrega2_ValleYbañez_Matias/pages/historia.html
@@ -14,7 +14,8 @@
 
     <!-- CSS Estilo-->
     <link rel="stylesheet" href="../estilo.css">
-    <title>Los Piojos - Pagina Fan</title>
+    <title>Los Piojos - Historia</title>
+    <link rel="icon" type="image/x-icon" href="../recursos/piojos.ico">
   </head>
     <!--Header-->
     <header class="container-fluid d-flex justify-content-LEFT" style="background-color: red">
