--- a/PreEntrega3_ValleYbañez_Matias/pages/historia.html
+++ b/PreEntrega3_ValleYbañez_Matias/pages/historia.html
@@ -13,7 +13,7 @@
 
 
     <!-- CSS Estilo-->
-    <link rel="stylesheet" href="./CSS/estilo.css">
+    <link rel="stylesheet" href="../CSS/estilo.css">
     <title>Los Piojos - Pagina Fan</title>
   </head>
     <!--Header-->
