Push Trabajo Final
Se elimina la pre entrega 3, y se pushea la entrega final.
Saludos!

--- a/ProyectoFinal_ValleYbañez_Matias/pages/historia.html
+++ b/ProyectoFinal_ValleYbañez_Matias/pages/historia.html
@@ -4,6 +4,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="descripcion" content="Historia de los piojos">
+    <meta name="keywords" content="rock nacional, ciro, los piojos, argentina musica, rock arg, como ali, ciro martinez, ciroylospersas,ciroylospersasoficial,rock,lqf">
+
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -14,7 +17,9 @@
 
     <!-- CSS Estilo-->
     <link rel="stylesheet" href="../CSS/estilo.css">
-    <title>Los Piojos - Pagina Fan</title>
+    <title>Los Piojos Fan Page - Historia</title>
+    <link rel="icon" type="image/ico" href="../recursos/piojos.ico"/>
+
   </head>
     <!--Header-->
     <header class="container-fluid d-flex justify-content-LEFT" style="background-color: red">
@@ -23,26 +28,29 @@
     </header>
     <!--Barra Menu-->
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
-          <button class="navbar-toggler navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="../index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./novedades.html">Novedades</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Historia</a>
-
-              </li>
-            </ul>
-          </div>
+      <div class="container-fluid">
+        <button class="navbar-toggler navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./novedades.html">Novedades</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Historia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
+
 
 
     <!--Main // Historia-->
@@ -50,6 +58,7 @@
         <h1>Historia:</h1>
         <p>
             <img src="../recursos/piojos.jpg" class="d-block w-100" alt="fotos banda">
+            <br>
             Los Piojos fue un grupo musical de Argentina formado a fines del año 1988, en la Ciudad Jardín Lomas del Palomar, en la zona oeste del Gran Buenos Aires. Estuvo conformada, primordialmente, por el vocalista y letrista Andrés Ciro Martínez, el bajista Miguel Ángel Rodríguez, los guitarristas Gustavo Kupinski y Daniel Férnandez, y el baterista Daniel Buira. De todos los grupos surgidos durante la década de los 90, Los Piojos se erigió como una de los más populares incluso después de su separación, no solo por su poder de convocatoria y las importantes cifras de ventas en sus álbumes, sino también por una discografía de carácter sólido que fue haciéndose cada vez más personal.
         
             Tras un período de formación de cuatro años de presentaciones en vivo por alrededor de Argentina, Los Piojos publicaron su primer álbum de estudio, Chactuchac, en 1992, que incluyeron los sencillos «Tan solo» y «Yira - yira», que se convirtieron en insignias de la banda. Su segundo álbum, Ay ay ay (1994), continuó lanzando en auge su popularidad. Su consagración definitiva se dio con 3er arco (1996), que tuvo su punto comercial más alto, con los sencillos «El farolito» y «Verano del '92», y su aclamación por la crítica, siendo incluido en la lista de los "Los 100 mejores álbumes del rock argentino" según la revista Rolling Stone. A partir de allí Los Piojos empezarían a incorporar elementos de candombe, murga y tango en sus siguientes proyectos, Azul (1998) y Verde paisaje del infierno (2000). La banda retornaría al éxito comercial con sus dos últimas publicaciones, Máquina de sangre (2003) y Civilización (2007), alcanzando su cúspide de convocatoria en recitales, y acabarían separandóse el 30 de mayo de 2009 con un show en el Estadio Monumental ante 65 mil personas. </p>
@@ -58,29 +67,40 @@
         <!--Main // Miembros-->
         <div class="miembros w-75 mx-auto pt-2">
             <h1>Miembros:</h1>
-        <img src="../recursos/Ciro_en_2009_(cropped).jpg" class="d-block w-100" alt="ciro">
+        <img src="../recursos/Ciro_en_2009_(cropped).jpg" class="d-block w-100 " alt="ciro">
+        <br>
+
         <p>
             Andrés Ciro Martínez (Buenos Aires, Argentina; 11 de enero de 1968) es un cantautor argentino, fue vocalista del grupo musical Los Piojos, desde el inicio hasta el final (1989 - 2009) y actual líder de su grupo Ciro y los Persas, formado en 2009. </p>
             <br>
             <img src="../recursos/Miguel_Ángel_Rodríguez_en_2015_(cropped).jpg" class="d-block w-100" alt="micky">
+            <br>
+
         <p>Miguel Ángel Rodríguez (Villa Bosch; 10 de abril de 1968) conocido como Micky Rodríguez, es un bajista de Argentina. Fue integrante de los grupos musicales argentinos Los Piojos y Peperina en Llamas,1​ y actualmente es líder de La Que Faltaba. 
         </p>
         <br>
         <img src="../recursos/na29fo08.jpg" class="d-block w-100" alt="Tavo">
+        <br>
+
         <p>Gustavo Hernán Kupinski (Buenos Aires, Argentina, 18 de enero de 1974 – Dolores, Buenos Aires, Argentina; 4 de enero de 2011) conocido como Gustavo Kupinski, fue un guitarrista de Argentina, integrante del grupo musical argentino Los Piojos.1​2​ Antes de su muerte formaba parte del grupo musical Revelados y era guitarrista de Las Pelotas. </p>
         </div>
     <!--Footer-->
     <footer>
 
-        <p2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: aliceblue;">Todos los derechos reservados - Los Piojos
-        </p2>
-        <br>
+      <p2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: aliceblue;">Todos los derechos reservados - Los Piojos (Fan Club)
+      </p2>
+      <br>
 
-        <p2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: aliceblue;">Matias Valle - Coderhouse
-        </p2>
-        <br>
-        <p2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: aliceblue;">2023
-        </p2>
-    </footer>
+      <p2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: aliceblue;">Matias Valle - Coderhouse
+      </p2>
+      <br>
+      <p2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: aliceblue;">2023
+      </p2>
+      <div id="iconos">
+        <a title="Facebook" href="https://www.facebook.com/andresciromartinez" target="_blank"><img src="../recursos/facebook.svg" width = "40 px"alt="facebook"></a>
+        <a title="Twitter" href="https://twitter.com/ciroylospersas" target="_blank"><img src="../recursos/twitter.svg" width = "40 px" alt="twitter"></a>
+        <a title="Instagram" href="https://www.instagram.com/ciroylospersasoficial" target="_blank"><img src="../recursos/instagram.svg" width = "40 px" alt="instagram"></a>
+      </div>
+  </footer>
 
 </html>
