--- a/ProyectoFinal_ValleYbañez_Matias/index.html
+++ b/ProyectoFinal_ValleYbañez_Matias/index.html
@@ -4,6 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="descripcion" content="Pagina de inicio los piojos - Fan Club">
+    <meta name="keywords" content="rock nacional, ciro, los piojos, argentina musica, rock arg, como ali, ciro martinez, ciroylospersas,ciroylospersasoficial,rock,lqf">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -13,35 +15,40 @@
 
 
     <!-- CSS Estilo-->
-    <link rel="stylesheet" href="../CSS/estilo.css">
-    <title>Los Piojos - Pagina Fan</title>
+    <link rel="stylesheet" href="./CSS/estilo.css">
+    <title>Los Piojos Fan Page - Inicio</title>
+    <link rel="icon" type="image/ico" href="../recursos/piojos.ico"/>
+
   </head>
     <!--Header-->
     <header class="container-fluid d-flex justify-content-LEFT" style="background-color: red">
-        <img src = "../recursos/los-piojos-3-logo-png-transparent.png" width = "110px" alt="Foto piojos">
-            <div style="display: inline;position:static;"><img src="../recursos/Los_Piojos_logo.png" alt="Letra" width="400px" style="position: absolute;left: 80px;"></div>
+        <img src = "./recursos/los-piojos-3-logo-png-transparent.png" width = "110px" alt="Foto piojos">
+            <div style="display: inline;position:static;"><img src="./recursos/Los_Piojos_logo.png" alt="Letra" width="400px" style="position: absolute;left: 80px;"></div>
     </header>
     <!--Barra Menu-->
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
-          <button class="navbar-toggler navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/novedades.html">Novedades</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/historia.html">Historia</a>
-              </li>
-            </ul>
-          </div>
+      <div class="container-fluid">
+        <button class="navbar-toggler navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/novedades.html">Novedades</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/historia.html">Historia</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
 
       <!-- Imagenes-->
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
@@ -68,6 +75,7 @@
 
     <!--Main // Recitales-->
     <main>
+      <section class="Proximos eventos"> 
         <br>
         <h1>Proximos Eventos:</h1>
         <div class=" w-75 mx-auto pt-2">
@@ -91,33 +99,36 @@
 Primeramente se había fijado un show en el Club Ciudad de Buenos Aires para el día 14 de Mayo, pero al agotarse todas las entradas, el show se mudó al Estadio de Núñez, donde habían tocado hace años atras.
 </p>
 <img src="./recursos/FFF56097A-770x511_c.jpg" class="d-block w-100" alt="piojos">
-
+</section>
 <br>
 <br>
         </div>
 
         <hr>
         <br>
+        <section class="Musica w-75 mx-auto pt-2">
         <h1> Musica:</h1>
        <section class="container-fluid">
         <div class="row grid-fila">
             <div class="col">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/uIU7IElHDjo?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>             
+                <iframe width="400" height="315" src="https://www.youtube.com/embed/uIU7IElHDjo?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>             
             </div>
             <div class="col">
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/SAGI5HPOQ0M?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="400" height="315" src="https://www.youtube-nocookie.com/embed/SAGI5HPOQ0M?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div class="col">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/Hf8KLAvSelg?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="400" height="315" src="https://www.youtube.com/embed/Hf8KLAvSelg?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
           </div>
         </section>
-    </main>
+      </section>
 
+    </main>
+<br>
     <!--Footer-->
     <footer>
 
-        <p2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: aliceblue;">Todos los derechos reservados - Los Piojos
+        <p2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: aliceblue;">Todos los derechos reservados - Los Piojos (Fan Club)
         </p2>
         <br>
 
@@ -126,5 +137,10 @@ Primeramente se había fijado un show en el Club Ciudad de Buenos Aires para el 
         <br>
         <p2 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;color: aliceblue;">2023
         </p2>
+        <div id="iconos">
+          <a title="Facebook" href="https://www.facebook.com/andresciromartinez" target="_blank"><img src="./recursos/facebook.svg" width = "40 px"alt="facebook"></a>
+          <a title="Twitter" href="https://twitter.com/ciroylospersas" target="_blank"><img src="./recursos/twitter.svg" width = "40 px" alt="twitter"></a>
+          <a title="Instagram" href="https://www.instagram.com/ciroylospersasoficial" target="_blank"><img src="./recursos/instagram.svg" width = "40 px" alt="instagram"></a>
+        </div>
     </footer>
 </html>
