NO APARECIA EL FAV.ICO EN INDEX
Minor issue: NO APARECIA EL FAV.ICO EN INDEX

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- CSS Estilo-->
     <link rel="stylesheet" href="./CSS/estilo.css">
     <title>Los Piojos Fan Page - Inicio</title>
-    <link rel="icon" type="image/ico" href="../recursos/piojos.ico"/>
+    <link rel="icon" type="image/ico" href="./recursos/piojos.ico"/>
 
   </head>
     <!--Header-->
